# grafana-sample-backend-plugin-rust

./: Dockerfile  README.md  docker-compose.yaml  package.json
backend/: Cargo.toml
backend/src/: main.rs
component/: Cargo.toml
component/src/: lib.rs
component/wit/: backend.wit
grafana/provisioning/plugins/: plugin.yaml
src/: QueryEditor.tsx  datasource.ts  plugin.json  types.ts
