[package]
name = "grafana-sample-component-plugin-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# grafana-plugin-sdk = "0.5.0"
wit-bindgen = "0.39.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

# [patch.crates-io]
# grafana-plugin-sdk = { git = "https://github.com/grafana/grafana-plugin-sdk-rust", branch = "hackathon-12" }
