[package]
name = "grafana-sample-component-plugin-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.87"
# Pinned due to https://github.com/apache/arrow-rs/pull/7210
chrono = "=0.4.39"
futures-util = "0.3.31"
grafana-plugin-sdk = { version = "0.5.0", features = ["wit"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[patch.crates-io]
grafana-plugin-sdk = { git = "https://github.com/grafana/grafana-plugin-sdk-rust", branch = "hackathon-12" }
